# lambda_rs

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yaml
src/: dispatch.rs  dynamodb.rs  errors.rs  file_utils.rs  lambda_func.rs  main.rs  schema.rs
src/ffmpeg/: ffprobe.rs  gif.rs  mod.rs  png.rs  schema.rs
src/ffprobe/: ffprobe.rs  mod.rs  schema.rs
src/s3/: client.rs  mod.rs  transfer.rs  utils.rs
src/tests/: mod.rs  test_lambda.rs  test_s3.rs  utils.rs
terraform/: dynamodb.tf  iam.tf  lambda.tf  main.tf  outputs.tf  s3.tf  vars.tf
