[package]
name = "lambda_rs"
version = "0.0.1"
edition = "2024"

[dependencies]
lambda_runtime = {version = "1.0.2"}
tokio = {version = "1", features = ["full"]}
serde = {version = "1.0.228", features = ["derive"]}
serde_json = {version = "1.0.148"}
thiserror = {version = "2.0.17"}
tracing = {version = "0.1.44"}
tracing-subscriber = {version = "0.3.22"}
fastq_rs = {version = "0.0.2"}
aws-sdk-s3 = {version = "1.119.0"}
aws-config = {version = "1.1.7", features = ["behavior-version-latest", "credentials-login"]}
regex = {version = "1.12.2"}
uuid = {version = "1.19.0", features = ["v7"]}
