[package]
name = "lambda_rs"
version = "0.0.1"
edition = "2024"

[dependencies]
lambda_runtime = {version = "1.0.2"}
tokio = {version = "1", features = ["full"]}
serde = {version = "1.0.228", features = ["derive"]}
serde_json = {version = "1.0.148"}
thiserror = {version = "2.0.17"}
tracing = {version = "0.1.44"}
tracing-subscriber = {version = "0.3.22", features = ["env-filter", "registry"]}
tracing-bunyan-formatter = {version = "0.3.10"}
aws-sdk-s3 = {version = "1.119.0"}
aws-config = {version = "1.1.7", features = ["behavior-version-latest", "credentials-login"]}
aws-sdk-dynamodb = {version = "1.104.0", features = ["behavior-version-latest"]}
regex = {version = "1.12.2"}
uuid = {version = "1.19.0", features = ["v7"]}
rstest = {version = "0.26.1"}
tempfile = "3.25.0"
dotenv = {version = "0.15.0"}
bytes = {version = "1.11.1"}
strum = "0.27"
strum_macros = "0.27"
